force-app/main/default/objects/Tree_Plantation__c/Tree_Plantation__c.object-meta.xml
<CustomObject>
    <label>Tree Plantation</label>
    <nameField>
        <displayFormat>Tree-{000}</displayFormat>
        <label>Tree Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>