force-app/main/default/objects/Tree_Plantation__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age (In years)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>