force-app/main/default/objects/Tree_Plantation__c/fields/Number_Of_Tree_Planted__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Tree_Planted__c</fullName>
    <label>Number Of Tree Planted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>