force-app/main/default/objects/Tree_Plantation__c/fields/Planted_In__c.field-meta.xml
<CustomField>
    <fullName>Planted_In__c</fullName>
    <label>Planted In</label>
    <referenceTo>City__c</referenceTo>
    <relationshipName>Tree</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>