force-app/main/default/objects/Tree_Plantation__c/fields/Tree__c.field-meta.xml
<CustomField>
    <fullName>Tree__c</fullName>
    <label>Tree</label>
    <referenceTo>Tree__c</referenceTo>
    <relationshipLabel>Tree Plantation</relationshipLabel>
    <relationshipName>Tree_Plantation</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>