force-app/main/default/objects/Tree_Plantation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Age__c</columns>
    <columns>Tree__c</columns>
    <columns>Planted_In__c</columns>
    <columns>Number_Of_Tree_Planted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>